Corrected issue with link ot "blog posts"

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
     <a href="#why-course">Why This Course</a> |
     <a href="#learned">What I’ve Learnt</a> |
     <a href="#showcase">Skills Showcase</a> |
-    <a href="#blog">Blog</a> |
+    <a href="#blog-section">Blog</a> |
     <a href="#extras">Extras</a> |
     <a href="#contact">Contact</a>
   </nav>
